@@ -2,6 +2,8 @@
 	+ Added thin client general options: filename and next-server
 	+ Added include files to use by user in
 	  ${EBOX_HOME}/conf/dhcp/${iface}/plugins subdir
+	+ Bugfix. Check fixed mapping names not to collide with other
+	mappings in other models and make dhcpd crash
 0.10.99
 	+ Use the new model/view framework. UI uses Ajax.
 	+ Show eBox domain server if DNS is installed
